--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Basic task</title>
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mediaQuery.css">
+    <script src="https://unpkg.com/scrollreveal"></script>
   </head>
 
   <body>
@@ -41,7 +42,7 @@
             <span></span>
             <span></span>
         </div>
-        <div class="nav-links">
+        <div class="nav-links nav-left">
             <ul>
             <a href=""><li class="home">Home</li></a>
             <a href=""><li class="feature">Feature</li></a>
@@ -49,6 +50,14 @@
             <a href=""><li class="blog">Blog</li></a>
             <a href=""><li class="pricing">Pricing</li></a>
             </ul>
+            <button class="btn register-btn hamburger-btn">
+                Register Now 
+                <img 
+                src="./assets/whitearrow.png" 
+                alt=""
+                class="icon-png"
+                >
+            </button>
         </div>
       </nav>
       </header>
@@ -56,7 +65,7 @@
 
         <section class="section-one">
             <div class="section-one-container">
-                <div class="section-one-info-container">
+                <div class="section-one-info-container left">
                     <div class="section-one-title">
                     <h1>Lesson and Insights</h1>
                     <h1>from 8 years</h1>
@@ -79,13 +88,13 @@
         <section class="section-two">
             <div class="section-two-container">
                 <div class="section-two-info-container">
-                    <div class="section-two-title">
+                    <div class="section-two-title pop">
                     <h1>Manage your entire community</h1>
                     <h1>in a single system</h1>
                     <p>Who is Nextcent suitable for?</p>
                 </div>
                     <div class="unknow-one">
-                        <div class="template">
+                        <div class="template right">
                             <img 
                             src="./assets/Icon3.png" 
                             alt=""
@@ -100,7 +109,7 @@
                             </div>
 
                         </div>
-                        <div class="template">
+                        <div class="template right">
                             <img 
                             src="./assets/Icon2.png" 
                             alt=""
@@ -114,7 +123,7 @@
                                     </p>
                                 </div>
                         </div>
-                        <div class="template">
+                        <div class="template right">
                             <img 
                             src="./assets/Icon1.png" 
                             alt=""
@@ -142,7 +151,7 @@
                     class="section-three-pic"
                     >
                 </div>
-                <div class="section-three-info-container">
+                <div class="section-three-info-container right" >
                     <div class="section-three-title">
                     <h1>The unseen of spending three years at Pixelgrade
                     </h1>
@@ -157,15 +166,15 @@
 
         <section class="section-four">
             <div class="section-four-container">
-                <div class="section-four-info-container">
-                    <div class="section-four-title">
+            <div class="section-four-info-container">
+                <div class="section-four-title right" >
                     <h1>Caring is the new marketing</h1>
                     <p>The Nextcent blog is the best place to read about the latest membership insights, trends and more. See who's joining the community, read about how our community are increasing their membership income and lot's more.
                     </p>
                 </div>
                     <div class="unknow-two">
 
-                        <div class="pic-template">
+                        <div class="pic-template right">
                             <img 
                             src="./assets/image1.png" 
                             alt=""
@@ -186,7 +195,7 @@
                         </div>    
                         </div>
 
-                        <div class="pic-template">
+                        <div class="pic-template right">
                             <img 
                             src="./assets/image2.png" 
                             alt=""
@@ -207,7 +216,7 @@
                         </div> 
                         </div>
 
-                        <div class="pic-template">
+                        <div class="pic-template right">
                             <img 
                             src="./assets/image3.png" 
                             alt=""
@@ -249,22 +258,22 @@
             <p>All rights reserved</p>
             </div>
             <div class="socal-media">
-                <div><img 
+                <div class="left"><img 
                 src="./assets/instagram.png" 
                 alt="Insta pic"
                 class="icon-png"
                 ></div>
-                <div><img 
+                <div class="left"><img 
                 src="./assets/website.png" 
                 alt="Web pic"
                 class="icon-png"
                 ></div>
-                <div><img 
+                <div class="left"><img 
                 src="./assets/twitter.png" 
                 alt="Twitter pic"
                 class="icon-png"
                 ></div>
-                <div><img 
+                <div class="left"><img 
                 src="./assets/youtube.png" 
                 alt="YouTube pic"
                 class="icon-png"
@@ -275,21 +284,21 @@
             <div class="company">
                 <h2>Company</h2>
                 <ul>
-                    <li>About us</li>
-                    <li>Blog</li>
-                    <li>Contact us</li>
-                    <li>Pricing</li>
-                    <li>Testimonials</li>
+                    <li class="top">About us</li>
+                    <li class="top">Blog</li>
+                    <li class="top">Contact us</li>
+                    <li class="top">Pricing</li>
+                    <li class="top">Testimonials</li>
                 </ul>
             </div>
             <div class="support">
                 <h2>Support</h2>
                 <ul>
-                    <li>Help center</li>
-                    <li>Terms of service</li>
-                    <li>Legal</li>
-                    <li>Privacy policy</li>
-                    <li>Status</li>
+                    <li class="top">Help center</li>
+                    <li class="top">Terms of service</li>
+                    <li class="top">Legal</li>
+                    <li class="top">Privacy policy</li>
+                    <li class="top">Status</li>
                 </ul>
             </div>
             <div class="contact">
