--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="mediaQuery.css">
     <script src="https://unpkg.com/scrollreveal"></script>
   </head>
-
+<script src="//code.tidio.co/slehwtu1dmyuvb4qnos4cvxqzzpo4nml.js" async></script>
   <body>
     <header class="header">
         <div class="logo">
